--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Kama Secret
+  input#files(type="file")
+  #preview
+    img(src="")
+  form(method="POST", action="/submit_form")
+    input(type="hidden", value="")
+    input(type="submit")
