Client js and security creds on server

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,3 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+
+    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js")
+    script(type="text/javascript", src="/javascripts/lodash.min.js")
+    script(type="text/javascript", src="/javascripts/s3upload.js")
