--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,3 +9,4 @@ html
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js")
     script(type="text/javascript", src="/javascripts/lodash.min.js")
     script(type="text/javascript", src="/javascripts/s3upload.js")
+    script(type="text/javascript", src="/javascripts/app.js")
